<resources>
    <string name="app_name">EShop</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="toolBarTitle">EShop</string>
    <string name="toolbarItemPersonTitle">Person</string>
    <string name="toolbarItemCartTitle">Carts</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="mainTitle">Welcome to EShop</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">P</string>
    <string name="categoryTite">Categories</string>
    <string name="phone">Phones</string>
    <string name="laptop">Laptops</string>
    <string name="accessories">Accessories</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="Account">Account Details</string>
    <string name="Payment">Payment Details</string>

    <string name="menu_slideshow">Slideshow</string>

</resources>